--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
     align-items: center;
     justify-content: flex-end;
     flex-grow: 1;
-    margin-right: 50px;
+    margin-right: 100px;
+    gap: 50px;
 
 }
 
@@ -22,31 +23,47 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
 }
 
 .top-section {
     display: flex;
     height: 400px;
-    border-left: 100px;
-    border-right: 100px;
-    justify-content: space-between;
+    border-left: 50px;
+    border-right: 50px;
+    justify-content:space-between;
+    
 }
 
 .left {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     align-self: center;
-    margin-right: 100px;
+    margin-right: 50px;
     width: max-content;
+    flex-grow: 1;
 }
 
 .right {
     display: flex;
     flex-direction: column;
-    width: 500px;
     justify-content: center;
     align-items: flex-start;
     font-family: Helvetica, Arial, sans-serif;
-    margin-left: 100px;
+    margin-left: 50px;
+    flex-grow: 1;
+}
+
+.h2 {
+    display:flex;
+    flex-direction: column;
+}
+
+.text-above {
+    text-align: center;
+}
+
+.text-below {
+    text-align: center;
 }
