--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@
 .top-section {
     display: flex;
     height: 400px;
-    border-left: 50px;
-    border-right: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
     justify-content:space-between;
     
 }
@@ -43,6 +43,7 @@
     margin-right: 50px;
     width: max-content;
     flex-grow: 1;
+    
 }
 
 .right {
@@ -62,8 +63,80 @@
 
 .text-above {
     text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .text-below {
     text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.three-news-stories {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    font-family: Helvetica, Arial, sans-serif;
+    margin-top: 50px;
+}
+
+.quote-box{
+    height: 400px;
+      display: flex; 
+      justify-content: center;
+}
+
+.text {
+    align-self: center;
+    justify-content: center;
+    text-align: right;
+    font-family: Helvetica, Arial, sans-serif;
+      }
+
+.mid-news {
+    display: flex;
+    height: 400px;
+    margin-left: 50px;
+    margin-right: 50px;
+    justify-content:space-between;
+}
+
+.right-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-left: 50px;
+    width: max-content;
+    flex-grow: 1;
+    
+}
+
+.left-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    font-family: Helvetica, Arial, sans-serif;
+    margin-right: 50px;
+    flex-grow: 1;
+}
+
+.subscriptions {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    font-family: Helvetica, Arial, sans-serif;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 75px;
+    font-family: Helvetica, Arial, sans-serif;
+
 }
