--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     margin-left: 50px;
     margin-right: 50px;
     justify-content:space-between;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .left {
@@ -45,10 +45,12 @@
     width: max-content;
 }
 
-img {
-    width: 600px;
-    height: auto;
+.image1
+{
+width:600px;
+height:auto;
 }
+
 
 .right {
     display: flex;
@@ -101,8 +103,23 @@ a {
     max-height: 150px;
 }
 
+.image2 {
+    width: 200px;
+    height:auto;
+    }
+
+.image3 {
+width: 200px;
+height:auto;
+}
+
+.image4 {
+    width: 200px;
+    height:auto;
+    }
+
 .quote-box{
-    height: 400px;
+    height: 300px;
       display: flex; 
       justify-content: center;
 }
@@ -120,6 +137,7 @@ a {
     margin-left: 50px;
     margin-right: 50px;
     justify-content:space-between;
+    margin-bottom: 100px;
 }
 
 .right-2 {
@@ -129,8 +147,14 @@ a {
     align-self: center;
     margin-left: 50px;
     width: max-content;
-    
 }
+
+.image5
+{
+width: 600px;
+height:auto;
+}
+
 
 .left-2 {
     display: flex;
@@ -148,6 +172,7 @@ a {
     font-family: Helvetica, Arial, sans-serif;
     margin-top: 50px;
     margin-bottom: 50px;
+    gap: 100px;
 }
 
 .footer {
@@ -156,5 +181,6 @@ a {
     justify-content: center;
     height: 75px;
     font-family: Helvetica, Arial, sans-serif;
+    background-color: beige;
 
 }
