--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@
     font-family: "auger-mono", monospace;
     font-weight: 400;
     font-style: normal;
-
 }
 
 .top-buttons {
@@ -79,6 +78,7 @@ font-weight: 700;
 font-style: normal;
     font-size: 100px;
     margin-bottom: 30px;
+    color: #e8584f;
 }
 
 .tu {
@@ -107,7 +107,8 @@ a {
     font-family: "auger-mono", monospace;
     font-weight: 400;
     font-style: normal;
-    font-size: 22px;
+    font-size: 30px;
+    color: #000000
 }
 
 .text-below {
@@ -254,7 +255,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     gap: 50px;
-    margin-top: 125px;
+    margin-top: 150px;
     margin-bottom: 175px;
     gap: 100px;
     line-height: 30px;
@@ -324,7 +325,7 @@ h1 {
     font-family: "balto", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-color: rgb(255, 128, 128);
+    background-color: #e8584f
 }
 
 .button-50 {
@@ -378,8 +379,59 @@ h1 {
   }
 }
 
+.button-51 {
+    appearance: button;
+    background-color: rgb(255, 255, 255);
+    background-image: none;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 4px;
+    box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+    box-sizing: border-box;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    display: inline-block;
+    font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 10px;
+    margin: 0 5px 10px 0;
+    overflow: visible;
+    padding: 12px 40px;
+    text-align: center;
+    text-transform: none;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
+  
+  .button-51:focus {
+    text-decoration: none;
+  }
+  
+  .button-51:hover {
+    text-decoration: none;
+  }
+  
+  .button-51:active {
+    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+    outline: 0;
+  }
+  
+  .button-51:not([disabled]):active {
+    box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+    transform: translate(2px, 2px);
+  }
+  
+  @media (min-width: 768px) {
+    .button-51 {
+      padding: 12px 50px;
+    }
+  }
+
 .button-32 {
-  background-color: #fff000;
+  background-color: #f3d250;
   border-radius: 12px;
   color: #000;
   cursor: pointer;
@@ -400,7 +452,7 @@ h1 {
 .button-32:not(:disabled):hover,
 .button-32:not(:disabled):focus {
   outline: 0;
-  background: #f4e603;
+  background: #fff000;
   box-shadow: 0 0 0 2px rgba(0,0,0,.2), 0 3px 8px 0 rgba(0,0,0,.15);
 }
 
@@ -410,7 +462,7 @@ h1 {
 }
 
 .button-31 {
-    background-color: #fff000;
+    background-color: #f3d250;
     border-radius: 12px;
     color: #000;
     cursor: pointer;
