--- a/style.css
+++ b/style.css
@@ -492,3 +492,24 @@ h1 {
     filter: saturate(0.2) opacity(0.5);
     cursor: not-allowed;
   }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(80, 80, 80, 0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    line-height: 30px;
+    
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
